# CMake-Qt-HelloWorld

./: README.md
TestCMakeQt/: CMakeLists.txt  mainwindow.ui
